<resources>
    <string name="app_name">Prompter</string>
    <string name="send_text">Send Text</string>
    <string name="_9974686370">9974686370</string>
    <string name="i_am_gonna_get_late">I am gonna get late honey, please don\'t wait and have dinner, Good night!!</string>
    <string name="sara_jones">Sara Jones</string>
    <string name="_9988776655">9988776655</string>
    <string name="if_you_deny">If you reject permission,you can not use this service</string>
    <string name="please_turn_on_permissions">Please turn on permissions at [Setting] > [Permission]</string>
    <string name="enter_your_template_message">Enter Your template message</string>
    <string name="notify_time">Notify Time</string>
    <string name="done">Done</string>
    <string name="get_a_reminder">Get a reminder!</string>
    <string name="send_message_directly_from_the_notification">Send Message directly from the notification!</string>
    <string name="enter_time">Enter time</string>
    <string name="cancel">cancel</string>
    <string name="daily_notify_me">Daily Notify Me</string>
    <string name="opps">Opps!</string>
    <string name="nothing_found">Nothing Found !!</string>
    <string name="send_message">Send Message</string>
    <string name="to_Emma">Emma</string>
    <string name="other">Other</string>
    <string name="sim_1">Sim 1</string>
    <string name="sim_2">Sim 2</string>
    <string name="send">Send</string>
    <string name="share_using">Share using</string>
</resources>
