<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8dp"
        android:text="@string/send_message"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_8dp"
            android:src="@drawable/newsletter"
            android:tint="@color/colorBlack" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8dp"
            android:src="@drawable/cancel"
            android:tint="@color/colorAccent" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:text="@string/to_Emma"
        android:textColor="@color/colorBlack" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:minHeight="70dp"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="ssss"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_4dp"
            android:drawableStart="@drawable/ic_share_24dp"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/other"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/btnSim1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bg_white"
            android:drawablePadding="@dimen/dimen_4dp"
            android:drawableStart="@drawable/ic_sim_card_24dp"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/sim_1"
            android:textColor="@color/colorBlack"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btnSim2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bg_white"
            android:drawablePadding="@dimen/dimen_4dp"
            android:drawableStart="@drawable/ic_sim_card_24dp"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/sim_2"
            android:textColor="@color/colorBlack"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>